Fix spacing on element of the block deforestation info #21

--- a/themes/plenamata/assets/scss/5-blocks/_b-deforestation-info.scss
+++ b/themes/plenamata/assets/scss/5-blocks/_b-deforestation-info.scss
@@ -29,7 +29,6 @@
         @include desktop {
             align-items: flex-end;
             justify-content: space-between;
-            margin-bottom: var(--s-small);
         }
 
         @media (max-width: 599px) {
